--- a/app/src/main/res/layout/edit_kuis_single_item_view.xml
+++ b/app/src/main/res/layout/edit_kuis_single_item_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="110dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="8dp"
     app:cardCornerRadius="10dp"
@@ -10,6 +10,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:id="@+id/startEditQuizButton"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
@@ -18,27 +19,15 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             >
-
             <TextView
-                android:id="@+id/BabView"
+                android:id="@+id/tvBabView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="Bab 1"
-                android:layout_marginLeft="130dp"
+                android:layout_marginLeft="150dp"
                 android:textSize="40dp"
                 android:textStyle="bold" />
-
-            <ImageView
-                android:id="@+id/playButttonQuiz"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="50dp"
-                android:src="@drawable/play"
-                />
-
         </LinearLayout>
     </LinearLayout>
-
 </androidx.cardview.widget.CardView>
