--- a/app/src/main/res/layout/edit_kuis_single_bablist_item_view.xml
+++ b/app/src/main/res/layout/edit_kuis_single_bablist_item_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="55dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="8dp"
     app:cardCornerRadius="10dp"
@@ -9,8 +9,8 @@
     android:layout_marginTop="50dp">
 
     <LinearLayout
-        android:layout_width="match_parent"
         android:id="@+id/startEditQuizButton"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
@@ -30,4 +30,5 @@
                 android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
+
 </androidx.cardview.widget.CardView>
