--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -68,12 +68,13 @@
         app:layout_constraintTop_toBottomOf="@+id/passwordLg" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/ForgotPassword"
         android:layout_width="93dp"
         android:layout_height="26dp"
         android:layout_marginTop="336dp"
+        android:onClick="resetEmail"
         android:fontFamily="sans-serif"
-        android:text="Register "
+        android:text="@string/click_here"
         android:textColor="#00A896"
         android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -81,23 +82,23 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView5"
         app:layout_constraintTop_toBottomOf="@+id/button2"
-        app:layout_constraintVertical_bias="0.868" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="185dp"
+        android:layout_width="wrap_content"
         android:layout_height="27dp"
         android:layout_marginTop="144dp"
         android:fontFamily="sans-serif"
-        android:text="You are not a member ? "
+        android:text="Forgot Password? "
         android:textColor="#B3000000"
         android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.032"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button2"
-        app:layout_constraintVertical_bias="0.948" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/textView4"
@@ -105,7 +106,7 @@
         android:layout_height="70dp"
         android:layout_marginTop="228dp"
         android:fontFamily="@font/baloo"
-        android:text="Hello Student"
+        android:text="@string/hello_user"
         android:textColor="#B3000000"
         android:textSize="45sp"
         app:layout_constraintEnd_toEndOf="parent"
