--- a/app/src/main/res/layout/edit_kuis_single_item_view.xml
+++ b/app/src/main/res/layout/edit_kuis_single_item_view.xml
@@ -25,9 +25,17 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="Bab 1"
-                android:layout_marginLeft="150dp"
+                android:layout_marginLeft="140dp"
                 android:textSize="40dp"
                 android:textStyle="bold" />
+            <ImageView
+                android:id="@+id/deleteBab"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="50dp"
+                android:src="@drawable/delete"
+                />
         </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
