--- a/app/src/main/res/layout/activity_regis.xml
+++ b/app/src/main/res/layout/activity_regis.xml
@@ -5,168 +5,147 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:background="#FFFFFF">
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="105dp"
-        android:layout_height="27dp"
-        android:fontFamily="sans-serif"
-        android:text="Login "
-        android:textColor="#00A896"
-        android:textSize="17sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/button4"
-        app:layout_constraintVertical_bias="0.917" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="161dp"
-        android:layout_height="29dp"
-        android:fontFamily="sans-serif"
-        android:text="You are a member ? "
-        android:textColor="#B3000000"
-        android:textSize="17sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.068"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button4"
-        app:layout_constraintVertical_bias="0.925" />
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="47dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="4dp"
-        android:src="@drawable/ic_arrow_back_black_24dp"
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/biru"
+        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="190dp"
-        android:layout_height="59dp"
-        android:background="@drawable/bg_button"
-        android:onClick="regis"
-        android:text="Register"
-        android:textColor="@color/lightgray"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
+        android:layout_width="411dp"
+        android:layout_height="500dp"
+        android:layout_marginTop="232dp"
+        android:background="@drawable/bg_login"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/notelp"
-        app:layout_constraintVertical_bias="0.679" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="276dp"
-        android:layout_height="68dp"
-        android:layout_marginTop="180dp"
-        android:fontFamily="@font/baloo"
-        android:text="Sign Up!"
-        android:textColor="#B3000000"
-        android:textSize="45sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.377"
+
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="273dp"
+            android:layout_height="54dp"
+            android:background="@drawable/bg_button"
+            android:onClick="regis"
+            android:text="Register"
+            android:textColor="@color/lightgray"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/notelp"
+            app:layout_constraintVertical_bias="0.548" />
+
+        <EditText
+            android:id="@+id/email"
+            android:layout_width="309dp"
+            android:layout_height="41dp"
+            android:layout_above="@+id/notelp"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="68dp"
+            android:background="@drawable/bg_edit"
+            android:ems="10"
+            android:hint="E-mail"
+            android:inputType="textEmailAddress"
+            android:textSize="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/nama"
+            android:layout_width="309dp"
+            android:layout_height="41dp"
+            android:layout_above="@+id/notelp"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/bg_edit"
+            android:ems="10"
+            android:hint="Nama"
+            android:inputType="textPersonName"
+            android:textSize="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/email" />
+
+        <EditText
+            android:id="@+id/notelp"
+            android:layout_width="309dp"
+            android:layout_height="41dp"
+            android:layout_alignStart="@+id/password"
+            android:layout_alignBottom="@+id/cardView"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/bg_edit"
+            android:ems="10"
+            android:hint="@string/no_handphone"
+            android:inputType="text|number"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/password" />
+
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="309dp"
+            android:layout_height="41dp"
+            android:layout_above="@+id/email"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/bg_edit"
+            android:ems="10"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:textSize="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/nama" />
+
+        <TextView
+            android:id="@+id/PilihRole"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/baloo"
+            android:text="@string/pilih_role"
+            android:textColor="#B3000000"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.159"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/notelp" />
+
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="7dp"
+            android:entries="@array/roleList"
+            app:layout_constraintBottom_toTopOf="@id/button4"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.167"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/notelp"
+            app:layout_constraintVertical_bias="0.558" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/logofix"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/email"
-        android:layout_width="309dp"
-        android:layout_height="41dp"
-        android:layout_above="@+id/notelp"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="260dp"
-        android:background="@drawable/bg_edit"
-        android:ems="10"
-        android:hint="E-mail"
-        android:inputType="textEmailAddress"
-        android:textSize="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="309dp"
-        android:layout_height="41dp"
-        android:layout_above="@+id/email"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/bg_edit"
-        android:ems="10"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:textSize="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nama" />
-
-    <EditText
-        android:id="@+id/nama"
-        android:layout_width="309dp"
-        android:layout_height="41dp"
-        android:layout_above="@+id/notelp"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/bg_edit"
-        android:ems="10"
-        android:hint="Nama"
-        android:inputType="textPersonName"
-        android:textSize="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email" />
-
-    <EditText
-        android:id="@+id/notelp"
-        android:layout_width="309dp"
-        android:layout_height="41dp"
-        android:layout_alignStart="@+id/password"
-        android:layout_alignBottom="@+id/cardView"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/bg_edit"
-        android:ems="10"
-        android:hint="@string/no_handphone"
-        android:inputType="text|number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
-
-    <TextView
-        android:id="@+id/PilihRole"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/baloo"
-        android:text="@string/pilih_role"
-        android:textColor="#B3000000"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/spinner"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.159"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/notelp"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="7dp"
-        android:entries="@array/roleList"
-        app:layout_constraintBottom_toTopOf="@id/button4"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.153"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/notelp"
-        app:layout_constraintVertical_bias="0.406" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
 
