--- a/app/src/main/res/drawable/bg_edit.xml
+++ b/app/src/main/res/drawable/bg_edit.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
    android:shape="rectangle">
-    <solid android:color="#CAC9C9"/>
-    <corners android:radius="20dp"/>
+    <solid android:color="#FFFFFF"/>
+    <corners android:radius="25dp"/>
+    <stroke android:width="2dp"
+        android:color="#3FBBF4"/>
+
     <padding android:left="25sp"/>
 </shape>
